--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -11,6 +11,11 @@ form.contact input{
 	padding: 10px 10px;
 	width: 100%;
 }
+
+.leadinModal {
+	z-index: 9999;
+}
+
 @media only screen and (min-device-width: 360px) and (max-device-width: 736px) {
 }
 
